fix: missing background on news, filter out 0 review counts, adjust some paddings

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -106,7 +106,6 @@ samp {
 .p-fieldset {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-  background: unset !important;
 }
 
 .p-autocomplete > input {
